// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusIndicator component > should match a snapshot 1`] = `
<DocumentFragment>
  <span
    class="el-intent-primary el-status-indicator"
  />
</DocumentFragment>
`;

exports[`StatusIndicator component > should match a snapshot 2`] = `
<DocumentFragment>
  <span
    class="el-intent-primary el-status-indicator"
  />
</DocumentFragment>
`;

exports[`StatusIndicator component > should match a snapshot 3`] = `
<DocumentFragment>
  <span
    class="el-intent-pending el-status-indicator"
  />
</DocumentFragment>
`;

exports[`StatusIndicator component > should match a snapshot 4`] = `
<DocumentFragment>
  <span
    class="el-intent-danger el-status-indicator"
  />
</DocumentFragment>
`;

exports[`StatusIndicator component > should match a snapshot 5`] = `
<DocumentFragment>
  <span
    class="el-intent-success el-status-indicator"
  />
</DocumentFragment>
`;

exports[`StatusIndicator component > should match a snapshot 6`] = `
<DocumentFragment>
  <span
    class="el-intent-warning el-status-indicator"
  />
</DocumentFragment>
`;

exports[`StatusIndicator component > should match a snapshot 7`] = `
<DocumentFragment>
  <span
    class="el-intent-neutral el-status-indicator"
  />
</DocumentFragment>
`;

exports[`StatusIndicator component > should match a snapshot 8`] = `
<DocumentFragment>
  <span
    class="el-intent-default el-status-indicator"
  />
</DocumentFragment>
`;
